--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -12,7 +12,8 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "EnableDeveloperExceptions": "False",
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "ExploreCalifornia": {
